fix: change visible for label

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -143,7 +143,7 @@ nav
 	font-weight: 300
 	text-transform: uppercase
 	text-align: center
-	z-index: 2
+	z-index: 1
 	&_white
 		background-color: #fff
 		color: #000
